# Tic-Tac-Toe_Games

./: A3_S1_20220037_Problem1.cpp  A3_S1_20220037_Problem4.cpp  A3_S1_20220457_Problem2.cpp  A3_S1_20220457_Problem5.cpp  A3_S2_20230607_Problem3.cpp  A3_S2_20230607_Problem6.cpp  README.md
A3_Task2_20230607/: Board.cpp  Board.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h  X_O_Board.cpp  X_O_Board.h  main.cpp
FCAI_Game_App/: Board_Games.hpp  CMakeLists.txt  GameManager.cpp  Game_App.cpp  Player.cpp  Pyramid_X_O.cpp  README!  RandomPlayer.cpp  X_O_5X5.cpp  X_O_Game.cpp  connect4.cpp
Game_1/: BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  RandomPlayer.cpp  X_O_App.cpp  X_O_Board.cpp  read me
Task 2/A3_Task2_20230607/: Board.cpp  Board.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h  X_O_Board.cpp  X_O_Board.h  main.cpp
Task 2/FCAI_Game_App/: Board_Games.hpp  CMakeLists.txt  GameManager.cpp  Game_App.cpp  Player.cpp  Pyramid_X_O.cpp  RandomPlayer.cpp  X_O_5X5.cpp  X_O_Game.cpp  connect4.cpp
Task 2/Game_1/: BoardGame_Classes.hpp  CMakeLists.txt  GUI.cpp  GameManager.cpp  RandomPlayer.cpp  X_O_App.cpp  X_O_Board.cpp
Task 2/game2/: BoardGame_Classes.hpp  connect4.cpp  connect4.h  main.cpp
game2/: BoardGame_Classes.hpp  CMakeLists.txt  connect4.cpp  connect4.h
